[gd_scene load_steps=6 format=3 uid="uid://c2gikbmtandy"]

[ext_resource type="Theme" uid="uid://y0ybtns8v84q" path="res://main_theme.tres" id="1_5wmo1"]
[ext_resource type="Script" path="res://scenes/ui/card_pile_view.gd" id="1_7ligo"]
[ext_resource type="PackedScene" uid="uid://bor5gceevqpo6" path="res://scenes/ui/card_menu_ui.tscn" id="1_8vys3"]
[ext_resource type="Theme" uid="uid://c8iww1ssy8m72" path="res://button_theme.tres" id="4_k24v1"]

[sub_resource type="LabelSettings" id="LabelSettings_jhqy8"]
font_size = 30

[node name="CardPileView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7ligo")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.478872, 0.801894, 0.638918, 0.470588)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_5wmo1")
text = "Discard pile"
label_settings = SubResource("LabelSettings_jhqy8")
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 2

[node name="Cards" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 20
columns = 6

[node name="CardMenuUI" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI8" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI9" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI10" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI11" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI12" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI13" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI14" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI15" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI16" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI17" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI18" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI19" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI20" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI21" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI22" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI23" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI24" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI25" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI26" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI27" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI28" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI29" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI7" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI2" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI3" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI4" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI5" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="CardMenuUI6" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_8vys3")]
layout_mode = 2

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_top = 19.0
offset_right = -27.0
offset_bottom = 50.0
grow_horizontal = 0
theme = ExtResource("4_k24v1")
theme_override_font_sizes/font_size = 20
text = "Back"
